:zap: Improve performace across board
